tests/specs/check/cjs_default_export/main.out
Check (tsc [WILDLINE])
TS2339 [ERROR]: Property 'default' does not exist on type '() => number'.
export const Test: string = cjsDefault.default();
                                       ~~~~~~~
    at file://[WILDCARD]/main.ts:4:40

error: Type checking failed.
